--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
-				<div class="content">
+                            <div class="content" style="margin-top: 25%">
 					<header>
-						<h2>Olá.</h2>
+<!--						<h2>Olá.</h2>-->
 					</header>
 					<p>Seja Bem Vindo <strong>Content Manager System - CMS</strong> em PHP do Senac Rio
 					<a href="https://github.com/lpjunior/php_2017.2/?tree=cms" target="_blank">projeto</a> desenvolvido para os alunos da turma 2017.2,
 					modelo de um CMS para entender como funciona um sistema de site informativo.</p>
 					<footer>
-						<a href="#one" class="button style2 down">More</a>
+                                            <a href="#one" class="button style2 down" style="margin-top: -3%">More</a>
 					</footer>
 				</div>
 			</section>
